plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '3.0.1'
    id 'org.hidetake.swagger.generator' version '2.19.2'
}

group 'io.github'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.1'
}

sourceCompatibility = '20'
targetCompatibility = '20'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'io.github.wuerzburgtransportguide'
    mainClass = 'io.github.wuerzburgtransportguide.HelloApplication'
}

javafx {
    version = '20.0.2'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.47'
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

swaggerSources {
    netzplan {
        inputFile = file('netzplan.yaml')
        code {
            language = 'java'
            jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
        }
    }
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}

build.dependsOn generateSwaggerCode
